tests/integrations/basic-fail/tests/actual_tests_bless/rustfix-fail.stderr
error: expected `,` following `match` arm
 --> tests/actual_tests_bless/rustfix-fail.rs:5:27
  |
5 |         0 => String::new()
  |                           ^ help: missing a comma here to end this `match` arm: `,`

error: aborting due to 1 previous error

